# micro-grad-rs

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs  nn.rs  scalar.rs
