[package]
name = "micro-grad"
description = "A Rust implementation of Andrej Karpathy's micrograd: https://github.com/karpathy/micrograd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
log = "0.4"
num-traits = "0.2"